fix(chats/@container): Add margin-top to prevent first user message from being half cut (#124)
- Add `margin-top` to the first user message to address cases where it appears half-cut on certain screen sizes and zoom levels (<=90% or 100% with sidebar collapsed)
- Note: This introduces extra spacing in scenarios where the first message is not cut, but it ensures visibility across all targeted cases
- This is probably happend because GPThemes user message padding is bigger then defaults OpenAI's

Changes summary:
Added a `margin-top` to the first user message to prevent it from being partially cut on specific screen sizes and zoom levels, though it may cause minor spacing issues in unaffected scenarios.

--- a/src/sass/elements/_right--main.scss
+++ b/src/sass/elements/_right--main.scss
@@ -29,10 +29,10 @@
 
 	/* Chats <article> wrapper on XL screens (huge full width when sidebar collapsed) - with this cutted first user message is being fixed */
 	.\@thread-xl\/thread\:pt-header-height {
-		@include container('xxl') {
-			padding-top: calc(var(--p-chat-bubble) * 2) !important; // to cover user msg padding top and bottom, thats why is * 2
-			// background-color: red !important;
-		}
+		// @include container('xxl') {
+		margin-top: calc(var(--p-chat-bubble) * 2) !important; // to cover user msg padding top and bottom, thats why is * 2
+		// background-color: var(--c-accent) !important;
+		// }
 	}
 }
 
@@ -187,20 +187,9 @@
 	&:has(.agent-turn) {
 
 		.text-base.group\/turn-messages[class*="max-w-(--thread-content-max-width)"] {
-			// --pt-multiplier: 1.3;
 			background-color: var(--c-bg-msg-gpt);
-			// padding: calc(var(--p-chat-bubble) * var(--pt-multiplier)) var(--p-chat-bubble) var(--p-chat-bubble) var(--p-chat-bubble) !important;
 			padding: var(--p-chat-bubble) !important;
-			// padding: var(--p-chat-bubble) !important;
 			border-radius: var(--br-chat-bubble) !important;
-
-			// @include container('sm') {
-			// 	--pt-multiplier: 1;
-			// }
-
-			// @include dev('sm') {
-			// 	--pt-multiplier: 1.4;
-			// }
 
 			/* * Search - Maps wrapper */
 			.not-prose {
