--- a/src/sass/elements/_search.scss
+++ b/src/sass/elements/_search.scss
@@ -1,6 +1,7 @@
 /* ___ Search list of sources showed on the right h-full of the chats container */
 // [data-testid="screen-threadFlyOut"]:has([data-testid="bar-search-sources-header"]) {
 [data-testid="screen-threadFlyOut"] {
+    background-color: hsla(var(--accent-hsl) / 0.1) !important;
 
     /* Add hover state for searched items */
     a[class*="hover:bg-token-main-surface-secondary"] {
